HMAN-993: Fixed Sonar issues in LinkedHearingValidatorTest
Fixed a number of Sonar issues in LinkedHearingValidatorTest.  Also made some improvements such as replacing List.get(0) with List.getFirst(), replacing Arrays.asList() with List.of() and removing redundant curly braces from around one line lambda expressions.