@@ -39,7 +39,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -144,14 +143,11 @@ class LinkedHearingValidatorTest {
         assertFalse(errorMessages.isEmpty());
         assertEquals(1, errorMessages.size());
         assertEquals(INVALID_DELETE_HEARING_GROUP_HEARING_STATUS.replace("%s", hearingId3.toString()),
-                errorMessages.get(0));
+                errorMessages.getFirst());
     }
 
     @Test
     void shouldSucceedAsObsoleteDetailsAreForDeleting() {
-        final String requestId = "9176";
-        final String requestName = "Special request";
-
         LinkedGroupDetails groupDetails = generateLinkedGroupDetails(1L, "G112",
                 "Group 112", LinkType.ORDERED.label, "ACTIVE", "Reason1",
                 "Comments 1", LocalDateTime.now().minusDays(1));
@@ -169,8 +165,6 @@ class LinkedHearingValidatorTest {
 
     @Test
     void shouldExtractObsoleteDetailsForDeleting() {
-        final String requestId = "89176";
-        final String requestName = "compare and extract obsolete details";
         LinkedGroupDetails groupDetails = generateLinkedGroupDetails(1L, "G112",
                 "Group 112", LinkType.ORDERED.label, "ACTIVE", "Reason1",
                 "Comments 1", LocalDateTime.now().minusDays(1));
@@ -200,7 +194,6 @@ class LinkedHearingValidatorTest {
     @Test
     void shouldFailWithObsoleteDetailsNotValidForUnlinking() {
         final String requestId = "78176";
-        final String requestName = "Find obsolete details ARE NOT valid for unlinking";
         LinkedGroupDetails groupDetails = generateLinkedGroupDetails(1L, "G112",
                 "Group 112", LinkType.ORDERED.label, "ACTIVE", "Reason1",
                 "Comments 1", LocalDateTime.now().minusDays(1));
@@ -210,10 +203,10 @@ class LinkedHearingValidatorTest {
         List<LinkHearingDetails> payloadList = new ArrayList<>();
         payloadList.add(new LinkHearingDetails(
                 "2000000007",
-                existingInDataList.get(0).getLinkedOrder().intValue()));
+                existingInDataList.getFirst().getLinkedOrder().intValue()));
         payloadList.add(new LinkHearingDetails(
                 "2000000008",
-                existingInDataList.get(0).getLinkedOrder().intValue()));
+                existingInDataList.getFirst().getLinkedOrder().intValue()));
         HearingEntity hearing9 = generateHearing(2000000009L, PutHearingStatus.LISTED.name(), groupDetails, 2L);
         existingInDataList.add(hearing9);
 
@@ -233,17 +226,12 @@ class LinkedHearingValidatorTest {
     @Test
     void shouldFailWithObsoleteDetailsInvalidForUnlinkingBecauseHearingInPast() {
         final String requestId = "181896";
-        final String requestName = "Find obsolete details ARE NOT valid for unlinking";
         LinkedGroupDetails groupDetails = generateLinkedGroupDetails(1L, "G112",
                 "Group 112", LinkType.ORDERED.label, "ACTIVE", "Reason1",
                 "Comments 1", LocalDateTime.now().minusDays(1));
         HearingEntity hearing9 = generateHearing(2000000009L, PutHearingStatus.LISTED.name(),
                 groupDetails, 1L);
-        HearingEntity hearing8 = generateHearing(2000000008L, PutHearingStatus.LISTED.name(),
-                groupDetails, 2L);
-        HearingEntity hearing7 = generateHearing(2000000007L, PutHearingStatus.LISTED.name(),
-                groupDetails, 3L);
-        hearing9.setHearingResponses(Arrays.asList(
+        hearing9.setHearingResponses(List.of(
                 generateHearingResponseEntityWithHearingDays(1, LocalDateTime.now().minusDays(7),
                         List.of(LocalDateTime.now().minusMonths(4)
                         ))));
@@ -270,13 +258,12 @@ class LinkedHearingValidatorTest {
     @Test
     void shouldPassWithObsoleteDetailsValidForUnlinking() {
         final String requestId = "181896";
-        final String requestName = "Find obsolete details ARE valid for unlinking";
         LinkedGroupDetails groupDetails = generateLinkedGroupDetails(1L, "G112",
                 "Group 112", LinkType.ORDERED.label, "ACTIVE", "Reason1",
                 "Comments 1", LocalDateTime.now().minusDays(1));
         HearingEntity hearing9 = generateHearing(20000000009L, PutHearingStatus.LISTED.name(),
                 groupDetails, 2L);
-        hearing9.setHearingResponses(Arrays.asList(
+        hearing9.setHearingResponses(List.of(
                 generateHearingResponseEntityWithHearingDays(1, LocalDateTime.now().plusDays(7),
                         List.of(LocalDateTime.now().plusMonths(4)
                         ))));
@@ -287,10 +274,10 @@ class LinkedHearingValidatorTest {
         List<LinkHearingDetails> payloadList = new ArrayList<>();
         payloadList.add(new LinkHearingDetails(
                 "7",
-                existingInDataList.get(0).getLinkedOrder().intValue()));
+                existingInDataList.getFirst().getLinkedOrder().intValue()));
         payloadList.add(new LinkHearingDetails(
                 "8",
-                existingInDataList.get(0).getLinkedOrder().intValue()));
+                existingInDataList.getFirst().getLinkedOrder().intValue()));
         existingInDataList.add(hearing9);
 
         when(hearingRepository.findByRequestId(requestId)).thenReturn(existingInDataList);
@@ -386,9 +373,9 @@ class LinkedHearingValidatorTest {
 
             when(hearingRepository.existsById(2000000000L)).thenReturn(false);
 
-            Exception exception = assertThrows(HearingNotFoundException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(HearingNotFoundException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertEquals("No hearing found for reference: 2000000000", exception.getMessage());
         }
 
@@ -410,9 +397,9 @@ class LinkedHearingValidatorTest {
             ObjectWriter ow = new ObjectMapper().writer().withDefaultPrettyPrinter();
             String json = ow.writeValueAsString(hearingLinkGroupRequest);
             logger.info(json);
-            Exception exception = assertThrows(BadRequestException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(BadRequestException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertEquals("001 Insufficient requestIds", exception.getMessage());
         }
 
@@ -437,16 +424,16 @@ class LinkedHearingValidatorTest {
                 1,
                 false,
                 LocalDateTime.now(),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now())),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now())),
                 null
             );
 
             when(hearingRepository.existsById(any())).thenReturn(true);
             when(hearingRepository.findById(any())).thenReturn(Optional.of(hearingEntity));
 
-            Exception exception = assertThrows(BadRequestException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(BadRequestException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertEquals("002 hearing request isLinked is False", exception.getMessage());
         }
 
@@ -455,9 +442,6 @@ class LinkedHearingValidatorTest {
             LinkedGroupDetails groupDetails1 = generateLinkedGroupDetails(200L, "G112",
                     "Group 112", LinkType.SAME_SLOT.label, "ACTIVE", "Reason1",
                     "Comments 1", LocalDateTime.now().minusDays(1));
-            LinkedGroupDetails groupDetailsAlternate = generateLinkedGroupDetails(202L, "G114",
-                    "Group 114", LinkType.SAME_SLOT.label, "ACTIVE", "Reason2",
-                    "Comments 2", LocalDateTime.now().minusDays(1));
 
             HearingEntity hearingEntity = generateHearingEntity(
                 2000000000L,
@@ -465,13 +449,11 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now(),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now())),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now())),
                 groupDetails1
             );
 
             LinkHearingDetails hearingDetails1 = generateHearingDetails("2000000000", 1);
-            HearingEntity hearing1 = generateHearing(2000000000L, PutHearingStatus.HEARING_REQUESTED.name(),
-                    groupDetails1, 1L);
 
             when(hearingRepository.existsById(any())).thenReturn(true);
             when(hearingRepository.findById(any())).thenReturn(Optional.of(hearingEntity));
@@ -489,9 +471,9 @@ class LinkedHearingValidatorTest {
                 )
             );
 
-            Exception exception = assertThrows(BadRequestException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(BadRequestException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertEquals("003 hearing request already in a group", exception.getMessage());
         }
 
@@ -516,16 +498,16 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now(),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now())),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now())),
                 null
             );
 
             when(hearingRepository.existsById(any())).thenReturn(true);
             when(hearingRepository.findById(any())).thenReturn(Optional.of(hearingEntity));
 
-            Exception exception = assertThrows(BadRequestException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(BadRequestException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertEquals("004 Invalid state for hearing request 2000000000", exception.getMessage());
         }
 
@@ -570,15 +552,15 @@ class LinkedHearingValidatorTest {
                 null
             );
             // set the hearing window to prior to current date - invalid
-            hearingEntity.getLatestHearingResponse().get().getHearingDayDetails().get(0)
+            hearingEntity.getLatestHearingResponse().get().getHearingDayDetails().getFirst()
                     .setStartDateTime(LocalDateTime.now().minusDays(2));
 
             when(hearingRepository.existsById(any())).thenReturn(true);
             when(hearingRepository.findById(any())).thenReturn(Optional.of(hearingEntity));
 
-            Exception exception = assertThrows(BadRequestException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(BadRequestException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertEquals("004 Invalid state for hearing request 2000000000", exception.getMessage());
         }
 
@@ -603,16 +585,16 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now().plusDays(1),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
                 null
             );
 
             when(hearingRepository.existsById(any())).thenReturn(true);
             when(hearingRepository.findById(any())).thenReturn(Optional.of(hearingEntity));
 
-            Exception exception = assertThrows(BadRequestException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(BadRequestException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertEquals("005 Hearing Order is not unique", exception.getMessage());
         }
 
@@ -638,16 +620,16 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now().plusDays(1),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
                 null
             );
 
             when(hearingRepository.existsById(any())).thenReturn(true);
             when(hearingRepository.findById(any())).thenReturn(Optional.of(hearingEntity));
 
-            Exception exception = assertThrows(BadRequestException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(BadRequestException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertEquals("Hearing order must exist and be greater than 0", exception.getMessage());
         }
 
@@ -672,16 +654,16 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now().plusDays(1),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
                 null
             );
 
             when(hearingRepository.existsById(any())).thenReturn(true);
             when(hearingRepository.findById(any())).thenReturn(Optional.of(hearingEntity));
 
-            Exception exception = assertThrows(BadRequestException.class, () -> {
-                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-            });
+            Exception exception = assertThrows(BadRequestException.class, () ->
+                linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+            );
             assertTrue(exception.getMessage().startsWith("Invalid value"));
             assertTrue(exception.getMessage().contains("for GroupLinkType"));
         }
@@ -698,7 +680,7 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now().plusDays(1),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
                 null
             );
 
@@ -733,7 +715,7 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now().plusDays(1),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000000L, LocalDateTime.now().plusDays(1))),
+                List.of(generateHearingDayDetailsEntity(2000000000L, LocalDateTime.now().plusDays(1))),
                 null
             );
 
@@ -809,16 +791,16 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now().plusDays(1),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
                 null
         );
 
         when(hearingRepository.existsById(any())).thenReturn(true);
         when(hearingRepository.findById(any())).thenReturn(Optional.of(hearingEntity));
 
-        Exception exception = assertThrows(BadRequestException.class, () -> {
-            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-        });
+        Exception exception = assertThrows(BadRequestException.class, () ->
+            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+        );
         assertTrue(exception.getMessage().startsWith("Invalid value"));
         assertTrue(exception.getMessage().contains("for GroupLinkType"));
     }
@@ -838,7 +820,7 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now().plusDays(1),
-                Arrays.asList(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
+                List.of(generateHearingDayDetailsEntity(2000000002L, LocalDateTime.now().plusDays(1))),
                 null
         );
 
@@ -878,9 +860,9 @@ class LinkedHearingValidatorTest {
         ObjectWriter ow = new ObjectMapper().writer().withDefaultPrettyPrinter();
         String json = ow.writeValueAsString(hearingLinkGroupRequest);
         logger.info(json);
-        Exception exception = assertThrows(BadRequestException.class, () -> {
-            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);;
-        });
+        Exception exception = assertThrows(BadRequestException.class, () ->
+            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+        );
         assertEquals("001 Insufficient requestIds", exception.getMessage());
     }
 
@@ -905,16 +887,16 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now(),
-                Arrays.asList(generateHearingDayDetailsEntity(1L, LocalDateTime.now())),
+                List.of(generateHearingDayDetailsEntity(1L, LocalDateTime.now())),
                 null
         );
 
         when(hearingRepository.existsById(2000000000L)).thenReturn(true);
         when(hearingRepository.findById(2000000000L)).thenReturn(Optional.of(hearingEntity));
 
-        Exception exception = assertThrows(BadRequestException.class, () -> {
-            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-        });
+        Exception exception = assertThrows(BadRequestException.class, () ->
+            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+        );
         assertEquals("004 Invalid state for hearing request 2000000000", exception.getMessage());
     }
 
@@ -939,16 +921,16 @@ class LinkedHearingValidatorTest {
                 1,
                 false,
                 LocalDateTime.now(),
-                Arrays.asList(generateHearingDayDetailsEntity(1L, LocalDateTime.now().plusDays(2))),
+                List.of(generateHearingDayDetailsEntity(1L, LocalDateTime.now().plusDays(2))),
                 null
         );
 
         when(hearingRepository.existsById(2000000000L)).thenReturn(true);
         when(hearingRepository.findById(2000000000L)).thenReturn(Optional.of(hearingEntity));
 
-        Exception exception = assertThrows(BadRequestException.class, () -> {
-            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-        });
+        Exception exception = assertThrows(BadRequestException.class, () ->
+            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+        );
         assertEquals("002 hearing request isLinked is False", exception.getMessage());
     }
 
@@ -974,16 +956,16 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now().plusDays(2),
-                Arrays.asList(generateHearingDayDetailsEntity(1L, LocalDateTime.now().plusDays(2))),
+                List.of(generateHearingDayDetailsEntity(1L, LocalDateTime.now().plusDays(2))),
                 null
         );
 
         when(hearingRepository.existsById(any())).thenReturn(true);
         when(hearingRepository.findById(2000000000L)).thenReturn(Optional.of(hearingEntity));
 
-        Exception exception = assertThrows(BadRequestException.class, () -> {
-            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-        });
+        Exception exception = assertThrows(BadRequestException.class, () ->
+            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+        );
         assertEquals("Hearing order must exist and be greater than 0", exception.getMessage());
     }
 
@@ -994,12 +976,12 @@ class LinkedHearingValidatorTest {
         hearing.setId(2000000000L);
         hearing.setStatus("NOTFORDELETE");
         hearing.setIsLinkedFlag(true);
-        hearing.setHearingResponses(Arrays.asList(
+        hearing.setHearingResponses(List.of(
                 generateHearingResponseEntityWithHearingDays(1, LocalDateTime.now().plusDays(7),
                         List.of(LocalDateTime.now().plusMonths(4)
                 ))));
 
-        List<HearingEntity> hearings = Arrays.asList(hearing);
+        List<HearingEntity> hearings = List.of(hearing);
         Exception exception = assertThrows(BadRequestException.class, () ->
                 linkedHearingValidator.validateUnlinkingHearingsStatus(hearings));
         assertEquals("008 Invalid state for unlinking hearing request 2000000000",
@@ -1052,9 +1034,9 @@ class LinkedHearingValidatorTest {
                 )
         );
 
-        Exception exception = assertThrows(BadRequestException.class, () -> {
-            linkedHearingValidator.checkHearingOrderIsUnique(hearingLinkGroupRequest, hearingDetails1);
-        });
+        Exception exception = assertThrows(BadRequestException.class, () ->
+            linkedHearingValidator.checkHearingOrderIsUnique(hearingLinkGroupRequest, hearingDetails1)
+        );
         assertEquals("005 Hearing Order is not unique", exception.getMessage());
     }
 
@@ -1070,7 +1052,7 @@ class LinkedHearingValidatorTest {
                         List.of(LocalDateTime.now().plusDays(7),
                                 LocalDateTime.now().minusDays(8))
                 )));
-        List<HearingEntity> hearings =  Arrays.asList(hearing);
+        List<HearingEntity> hearings = List.of(hearing);
         Exception exception = assertThrows(BadRequestException.class, () ->
                 linkedHearingValidator.validateUnlinkingHearingsWillNotHaveStartDateInThePast(hearings));
         assertEquals("008 Invalid state for unlinking hearing request 2000000000",
@@ -1089,7 +1071,7 @@ class LinkedHearingValidatorTest {
                         List.of(LocalDateTime.now().plusDays(7),
                                 LocalDateTime.now().minusDays(8))
                 )));
-        List<HearingEntity> hearings = Arrays.asList(hearing);
+        List<HearingEntity> hearings = List.of(hearing);
         Exception exception = assertThrows(BadRequestException.class, () ->
                 linkedHearingValidator.validateUnlinkingHearingsWillNotHaveStartDateInThePast(hearings));
         assertEquals("008 Invalid state for unlinking hearing request 2000000000",
@@ -1120,16 +1102,6 @@ class LinkedHearingValidatorTest {
                 "comments",
                 LocalDateTime.now().plusDays(4)
         );
-        LinkedGroupDetails groupDetailsAlternate = generateLinkedGroupDetails(
-                202L,
-                "requestId2",
-                "request name2",
-                "Same Slot",
-                "status",
-                "reason",
-                "comments",
-                LocalDateTime.now().plusDays(2)
-        );
 
         HearingEntity hearingEntity = generateHearingEntity(
                 2000000000L,
@@ -1137,7 +1109,7 @@ class LinkedHearingValidatorTest {
                 1,
                 true,
                 LocalDateTime.now(),
-                Arrays.asList(generateHearingDayDetailsEntity(1L, LocalDateTime.now().plusDays(2))),
+                List.of(generateHearingDayDetailsEntity(1L, LocalDateTime.now().plusDays(2))),
                 groupDetails1
         );
 
@@ -1159,9 +1131,9 @@ class LinkedHearingValidatorTest {
                 )
         );
 
-        Exception exception = assertThrows(BadRequestException.class, () -> {
-            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null);
-        });
+        Exception exception = assertThrows(BadRequestException.class, () ->
+            linkedHearingValidator.validateHearingLinkGroupRequest(hearingLinkGroupRequest, null)
+        );
         assertEquals("003 hearing request already in a group", exception.getMessage());
     }
 
@@ -1358,7 +1330,7 @@ class LinkedHearingValidatorTest {
         hearingResponse.setRequestVersion(requestVersion);
         hearingResponse.setRequestTimeStamp(requestTimestamp);
         hearingResponse.setHearingDayDetails(
-                hearingDaysStartDateTime.stream().map(this::generateHearingDayDetails).collect(Collectors.toList())
+                hearingDaysStartDateTime.stream().map(this::generateHearingDayDetails).toList()
         );
         return hearingResponse;
     }
